proper like endpoints
